--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
             android:maxLength="11"
             android:textAlignment="center"
             android:textColor="@color/color_262626"
+            android:textCursorDrawable="@drawable/color_cursor"
             android:textSize="20sp"
             android:background="@drawable/login_et_bg"
             android:padding="10dp"/>
