--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -9,15 +9,15 @@
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="aaaaaa"
             android:textSize="12sp"
             android:textColor="@color/color_666666"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:paddingTop="7.5dp"
-            android:paddingBottom="7.5dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
             android:background="@color/color_F4F4F4"
             tools:ignore="MissingConstraints"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"/>
 </FrameLayout>
