--- a/app/src/main/res/layout/common_toolbar.xml
+++ b/app/src/main/res/layout/common_toolbar.xml
@@ -15,7 +15,7 @@
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/tb_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="44dp"
             android:background="@color/white"
             app:popupTheme="@style/OverflowMenuStyle"
             app:contentInsetEnd="0dp"
@@ -29,6 +29,8 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:layout_gravity="center"
+                android:paddingTop="8dp"
+                android:includeFontPadding="false"
                 android:textColor="@color/color_333333"
                 android:textSize="17sp"/>
     </androidx.appcompat.widget.Toolbar>
