--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,8 @@
     <color name="color_191919">#191919</color>
     <color name="color_5AA2F4">#5AA2F4</color>
     <color name="color_302F2B">#302F2B</color>
+    <color name="color_336BB467">#336BB467</color>
+    <color name="color_116BB467">#116BB467</color>
+    <color name="color_226BB467">#226BB467</color>
+    <color name="color_4D6BB467">#4D6BB467</color>
 </resources>
