--- a/app/src/main/res/layout/activity_apply_invoice.xml
+++ b/app/src/main/res/layout/activity_apply_invoice.xml
@@ -204,6 +204,8 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:hint="请输入真实名称"
+                            android:textColorHint="@color/color_CCCCCC"
+                            android:textSize="15sp"
                             android:layout_marginStart="114.5dp"
                             android:background="@null"/>
                 </RelativeLayout>
@@ -246,6 +248,8 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:hint="请输入身份证号"
+                            android:textColorHint="@color/color_CCCCCC"
+                            android:textSize="15sp"
                             android:layout_marginStart="114.5dp"
                             android:background="@null"/>
                 </RelativeLayout>
@@ -290,6 +294,8 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:hint="请输入家庭地址"
+                            android:textColorHint="@color/color_CCCCCC"
+                            android:textSize="15sp"
                             android:layout_marginStart="114.5dp"
                             android:background="@null"/>
                 </RelativeLayout>
@@ -334,6 +340,8 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:hint="请输入电话号码"
+                            android:textColorHint="@color/color_CCCCCC"
+                            android:textSize="15sp"
                             android:layout_marginStart="114.5dp"
                             android:background="@null"/>
                 </RelativeLayout>
@@ -378,6 +386,8 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:hint="请输入开户银行"
+                            android:textColorHint="@color/color_CCCCCC"
+                            android:textSize="15sp"
                             android:layout_marginStart="114.5dp"
                             android:background="@null"/>
                 </RelativeLayout>
@@ -422,6 +432,8 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:hint="请输入银行账户"
+                            android:textColorHint="@color/color_CCCCCC"
+                            android:textSize="15sp"
                             android:layout_marginStart="114.5dp"
                             android:background="@null"/>
                 </RelativeLayout>
@@ -434,7 +446,7 @@
                     <RelativeLayout
                             android:id="@+id/ll_receive_addr"
                             android:layout_width="match_parent"
-                            android:layout_height="90dp"
+                            android:layout_height="wrap_content"
                             android:background="@color/white"
                             android:orientation="vertical"
                             android:foreground="?attr/selectableItemBackground"
@@ -467,7 +479,6 @@
                                     android:textColor="@color/color_333333"
                                     android:textSize="15sp"/>
 
-
                             <TextView
                                     android:id="@+id/tv_receice_address"
                                     android:layout_width="wrap_content"
@@ -476,7 +487,8 @@
                                     android:textColor="@color/color_333333"
                                     android:textSize="12sp"
                                     android:layout_marginEnd="15dp"
-                                    android:layout_marginTop="7dp"/>
+                                    android:layout_marginTop="7dp"
+                            android:layout_marginBottom="27dp"/>
                         </LinearLayout>
                         <ImageView
                                 android:id="@+id/iv"
