--- a/app/src/main/res/layout/dialog_qrcode.xml
+++ b/app/src/main/res/layout/dialog_qrcode.xml
@@ -8,49 +8,56 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical"
-            android:background="@drawable/dialog_normal">
+            android:background="@drawable/dialog_normal"
+            android:orientation="vertical">
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="扫码付款"
-                android:textSize="17sp"
-                android:textColor="@color/color_333333"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:text="扫码付款"
+                android:textColor="@color/color_333333"
+                android:textSize="17sp"/>
         <TextView
                 android:id="@+id/tv_customer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="客户:"
-                android:textSize="15sp"
-                android:textColor="@color/color_333333"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="30dp"
+                android:text="客户:"
+                android:textColor="@color/color_333333"
+                android:textSize="15sp"/>
         <TextView
                 android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="金额:"
-                android:textSize="15sp"
-                android:textColor="@color/color_333333"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="14dp"/>
-        <ImageView
-                android:id="@+id/iv_qrcode"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_marginTop="14dp"
+                android:text="金额:"
+                android:textColor="@color/color_333333"
+                android:textSize="15sp"/>
+        <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="70dp"
+                android:layout_marginTop="27dp"
                 android:layout_marginEnd="70dp"
-                android:layout_marginTop="27dp"/>
+                android:background="@drawable/qrcode_bg">
+            <ImageView
+                    android:id="@+id/iv_qrcode"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:padding="2dp"/>
+        </FrameLayout>
+
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="请将订单二维码给销售人员进行付款"
-                android:textSize="12sp"
-                android:textColor="@color/color_333333"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="26dp"
-                android:layout_marginBottom="25dp"/>
+                android:layout_marginBottom="25dp"
+                android:text="请将订单二维码给销售人员进行付款"
+                android:textColor="@color/color_333333"
+                android:textSize="12sp"/>
     </LinearLayout>
 </FrameLayout>
