--- a/app/src/main/res/layout/empty.xml
+++ b/app/src/main/res/layout/empty.xml
@@ -5,10 +5,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
-    <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@mipmap/nodata"/>
+    <!--<ImageView-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:src="@mipmap/nodata"/>-->
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
