--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,26 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/color_6BB467</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/color_6BB467</item>
         <item name="actionOverflowMenuStyle">@style/OverflowMenuStyle</item>
+        <!--<item name="android:colorBackground">@color/color_F4F4F4</item>-->
+        <!--<item name="materialButtonStyle">@style/materialButton</item>-->
     </style>
+
+    <!--<style name="materialButton" parent="Widget.MaterialComponents.Button">-->
+        <!--<item name="android:paddingLeft">8dp</item>-->
+        <!--<item name="android:paddingRight">8dp</item>-->
+        <!--<item name="android:paddingTop">4dp</item>-->
+        <!--<item name="android:paddingBottom">4dp</item>-->
+        <!--<item name="android:inset" tools:targetApi="lollipop">0dp</item>-->
+        <!--<item name="android:insetLeft">0dp</item>-->
+        <!--<item name="android:insetRight">0dp</item>-->
+        <!--<item name="android:insetBottom">0dp</item>-->
+        <!--<item name="android:insetTop">0dp</item>-->
+        <!--<item name="android:minWidth">0dp</item>-->
+        <!--<item name="android:minHeight">0dp</item>-->
+        <!--<item name="android:elevation" tools:targetApi="lollipop">0dp</item>-->
+    <!--</style>-->
 
     <style name="Splash" parent="AppTheme">
         <item name="windowActionBar">false</item>//取消Actionbar
@@ -100,15 +117,4 @@
         <!-- 设置弹出菜单文字颜色 -->
         <item name="android:textColor">@color/black</item>
     </style>
-    <!--toolbar的右上角按钮文字颜色和字体大小-->
-    <!--<style name="toolbar_menutext_style" parent="Theme.AppCompat.Light.DarkActionBar">-->
-        <!--<item name="actionMenuTextColor">@color/colorAccent</item>-->
-        <!--<item name="android:textSize">15sp</item>-->
-        <!--&lt;!&ndash;<item name="android:paddingRight">15dp</item>【设置toolbar右边距】&ndash;&gt;-->
-        <!--<item name="toolbarNavigationButtonStyle">@style/MyToolbarNavigationButtonStyle</item>-->
-    <!--</style>-->
-    <!--<style name="MyToolbarNavigationButtonStyle" parent="Widget.AppCompat.Toolbar.Button.Navigation">-->
-        <!--<item name="android:minWidth">0dp</item>-->
-        <!--<item name="android:scaleType">center</item>-->
-    <!--</style>-->
 </resources>
